<resources>
    <string name="app_name">App_Chats</string>
    <string name="nombre">Oumayma Outhmani</string>
    <string name="btn_registrar">Registrarme</string>
    <string name="btn_logear">Ingresar</string>
    <string name="Registro_EditT_Nombre_Usuario">Nombre de usuario</string>
    <string name="R_ET_Email">Correo Electronico</string>
    <string name="R_ET_Codigo">Contraseña</string>
    <string name="R_ET_RepetirCode">Repite tu Contraseña</string>
    <string name="btn_registr">Registrar</string>

    <string name="menu_perfil">Perfil de usuario</string>
    <string name="menu_acerca_de">Acercar de </string>
    <string name="menu_salir">Cerrar Cession</string>

    <string name="L_Et_email">Correo electronico</string>
    <string name="L_Et_password">Contraseña</string>
    <string name="Btn_login">Ingresar</string>

    <string name="Nombre_usuario">Nombre de usuario</string>

    <string name="Item_nombre_usuario">Nombre de usuario</string>
    <string name="Item_email_usuario">Email de usuario</string>

    <string name="Et_buscar_usuario">Buscar usuario</string>

    <!--Perfil de usuario-->
    <string name="P_n_usuario">Nombre de usuario</string>
    <string name="P_email">Email</string>
    <string name="P_nombres">Nombres</string>
    <string name="P_apellidos">Apellidos</string>
    <string name="P_profesion">Profesión</string>
    <string name="P_domicilio">Domicilio</string>
    <string name="P_edad">Edad</string>
    <string name="P_telefono">Telefono</string>
    <string name="Btn_Guardar">Guardar</string>


    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>

    <!--Chat-->
    <string name="N_usuario_chat">Nombre de usuario</string>
    
    <string name="Et_mensaje">Escriba un mensaje</string>

    <!--Item Chat-->
    <string name="TXT_ver_mensaje">Hola, como estas?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>