<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="70dp">

        <!--Nombre de usuario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/Registro_EditT_Nombre_Usuario"
                android:hint="@string/Registro_EditT_Nombre_Usuario"
                android:inputType="textPersonName|textCapWords"
                android:drawableStart="@drawable/ic_nombre_usuario"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:drawablePadding="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">>

            <EditText
                android:id="@+id/R_ET_Email"
                android:hint="@string/R_ET_Email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/R_ET_Codigo"
                android:hint="@string/R_ET_Codigo"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--R Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true" >



        <EditText
            android:id="@+id/R_ET_RepetirCode"
            android:hint="@string/R_ET_RepetirCode"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_registr"
            android:text="@string/btn_registr"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>





    </LinearLayout>



</RelativeLayout>